=> Added a new MovieManager class and implemented as a singleton. => Converted DatabaseManager class to a singleton.

--- a/OOD_S00200293_PersonalProject/OOD_S00200293_PersonalProject/OOD_S00200293_PersonalProject.csproj
+++ b/OOD_S00200293_PersonalProject/OOD_S00200293_PersonalProject/OOD_S00200293_PersonalProject.csproj
@@ -118,6 +118,7 @@
     </Compile>
     <Compile Include="APIManager.cs" />
     <Compile Include="DatabaseManager.cs" />
+    <Compile Include="MovieManager.cs" />
     <Compile Include="test.cs" />
     <Page Include="AddMovie.xaml">
       <SubType>Designer</SubType>
